# bensilence

./: .gitignore  MANIFEST.in  README.md  __init__.py  build_and_upload.py  pyproject.toml  requirements.txt  setup.py
bensilence/: bensilence.py
bensilence.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
examples/: example.py  silence_example.py
voice_chat/: README.md  __init__.py  main.py  requirements.txt  voice_chat.py
